--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "firebase": "^6.3.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
+    "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.3.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
